--- a/pages/detail.html
+++ b/pages/detail.html
@@ -21,142 +21,161 @@
     </header>
     <main class="detail-contenedor-comienzo">
         <div class="detail-img-atribu-descripcion">
-            <h1 id="detail-titulo1">Titulo del libro</h1>
+            <h1 id="detail-titulo1">El viento Conoce mi nombre</h1>
                 <div>
-                    <img src="../imges/study-7332172_1280.png" class="imagen-principal" alt="img">
+                    <img src="../img/el-viento-conoce-mi-nombre.jpg" class="imagen-principal" alt="img">
                 </div>
                 <div class="detail-atributos">
-                    <h2>año de publicacion: 2020</h2>
-                    <h2>temas: drama</h2>
-                    <h2>nota media: 8</h2>
-                    <h2>editorial: 12</h2>
+                    <div class="atributo1"><h2>Año de publicacion:<a href="#" style="color:#d62e2e"><br> 2022</h2></div></a>
+                    <div class="atributo2"><h2>Temas:<a href="#" style="color:#d62e2e"><br> Narrativa</h2></div></a> 
+                    <div class="atributo3"><h2>Editorial:<a href="#" style="color:#d62e2e"><br> Plaza & Janes</h2></div></a>
+                    <div class="atributo4"><h2>Nota media:<a href="#" style="color:#d62e2e"><br> 8/10 (6 votos)</h2></div></a>
                 </div>
                 <div class="detail-descripcion">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
                 </div>
                 <div class="detail-iconos">
-                    <a href="#"><i class="fa-solid fa-heart"></i></a>
-                    <a href="#"><i class="fa-solid fa-comment"></i></a>
-                    <a href="#"><i class="fa-solid fa-bookmark"></i></a>
-                    <a href="#"><i class="fa-sharp fa-solid fa-check"></i></a>
-                    <a href="#"><i class="fa-sharp fa-solid fa-book"></i></a>
-                </div>
-                
+                    <a href="#"><i class="fa-solid fa-bookmark" style="color: #e0d3b8"></i></a>
+                    <a href="#"><i class="fa-solid fa-heart" style= "color: #fb4848"></i></a>
+                    <a href="#"><i class="fa-solid fa-comment" style="color: #65b8a6"></i></a>
+                    <a href="#"><i class="fa-sharp fa-solid fa-check" style="color: #36802d"></i></a>
+                    <a href="#"><i class="fa-sharp fa-solid fa-book" style="color:#e8e490"></i></a>
+                </div>   
         </div>
+        <aside class="detail-lateral">
+            <h2 class="detail-titulo-lateral">Otros libros del autor</h2>
+            <div class="detail-otros-libros-autor">
+                <a href="#">
+                    <figure>
+                        <img src="../img/el-juego-de-ripper.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <button class="button1">Conoce mas</button>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="../img/evaluna.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <button class="button1">Conoce mas</button>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="../img/violeta.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <button class="button1">Conoce mas</button>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="../img/la suma.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <button class="button1">Conoce mas</button>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="../img/invierno.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <button class="button1">Conoce mas</button>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="../img/lacasadelosespiritus.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <button class="button1">Conoce mas</button>
+                    </figure>
+                </a>
+            </div>
+        </aside>
     </main>
-
     <section class="detail-contenedor-comentarios">
         <div class="detail-opiniones">
-            <h2>Comentarios y opiniones de "Mas alla del invierno"</h2>
+            <h2>Comentarios de "El viento conoce mi nombre"</h2><br>
             <article class="detail-comentarios">
-                <h3>Maria</h3> 
-                <h4>El viento conoce mi nombre</h4> 
-                <h6>24 de abril 2023</h6>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
-                <div><i class="fa-solid fa-user"></i></div>
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Maria</h3> 
+                <h5>24 de abril 2022</h5>
+                <p>La autora presenta varias historias en principio inconexas pero que confluyen en un final emotivo. El pasado siempre vuelve y es difícil ver que no se avanza y no aprendemos de nuestros errores como sociedad. Vidas destruidas en busca de un futuro mejor.</p><br>
+            </article>
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Juan</h3> 
+                <h5>12 de mayo 2022</h5>
+                <p>La lectura cautiva porque como en tantas otras lecturas de esta autora la vida cotidiana de los personajes discurre en un contexto real y muy bien descrito. Una historia preciosa, muy recomendable.</p><br>
+            </article>
+            <article class="detail-comentarios">
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Pedro</h3> 
+                <h5>17 de junio 2022</h5>
+                <p>Excelente novela. La recomiendo. Es muy triste y cruda, pero a la vez muy tierna por la relación de los protagonistas: Samuel, Anita, Leticia, Selena y Frank.</p><br>
             </article>
             <article class="-detail-comentarios">
-                <h3>Juan</h3> 
-                <h4>El viento conoce mi nombre</h4> 
-                <h6>24 de abril 2023</h6>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
-                <div><i class="fa-solid fa-user"></i></div>
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> laura</h3> 
+                <h5>14 de marzo 2023</h5>
+                <p>Este último libro me ha sorprendido. Tiene una primera parte (la persecución de los judíos en Alemania por los nazis) que no es un tema habitual en sus libros. Luego empiezan a aparecer personajes, muchos escenarios y saltos en el tiempo, que dificultan un poco la lectura.</p>
             </article>
-            <article class="detail-comentarios">
-                <h3>Pedro</h3> 
-                <h4>El viento conoce mi nombre</h4> 
-                <h6>24 de abril 2023</h6>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nam tenetur totam reiciendis facere maxime enim officiis fugiat. Cupiditate sed asperiores est! Optio, reiciendis sit dolorem aliquam rem repellat architecto.</p>
-                <div><i class="fa-solid fa-user"></i></div>
-            </article>
-        </div>   
+        </div>
     </section>
-    <div class="">
-        <div class="detail-contenedor-libros">
-            <div class="detail-titulo3">
-                <h2><span>Otras lecturas recomendadas</span></h2></div>
-            </div>
-    <div class="detail-contenedor-libros">  
+    
+    <div class="detail-contenedor-libros">
+        <div class="detail-titulo3">
+            <h2><span>Otras lecturas recomendadas</span></h2></div>
             <section class="detail-libros">
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 1">
+                            <img src="../img/lagrietadelsilencio.jpg" class="imagen3" alt="Imagen 1">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 2">
+                            <img src="../img/sorprendetumente.jpg" class="imagen3" alt="Imagen 2">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 3">
+                            <img src="../img/latemeraria.jpg" class="imagen3" alt="Imagen 3">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
+                            <img src="../img/hijoolvidado.jpg" class="imagen3" alt="Imagen 4">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
+                            <img src="../img/sociedaddelanieve.jpg" class="imagen3" alt="Imagen 4">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
+                            <img src="../img/blackwater2.jpg" class="imagen3" alt="Imagen 4">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
+                            <img src="../img/lashijasdelacria.jpg" class="imagen3" alt="Imagen 4">
                         </figure>
                     </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
                         <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
+                            <img src="../img/ramongener.jpg" class="imagen3" alt="Imagen 4">
                         </figure>
                     </a>
-                        <button>+ Info</button>
-                </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
-                        </figure>
-                    </a>
-                        <button>+ Info</button>
-                </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../imges/study-7332172_1280.png" class="imag" alt="Imagen 4">
-                        </figure>
-                    </a>
-                        <button>+ Info</button>
+                        <button class="button2">+ Info</button>
                 </article>
             </section>
     </div>
