cambio de descripciones y parrafos

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -32,13 +32,13 @@
                     <div class="atributo4"><h2>Nota media:<a href="#" style="color:#d62e2e"><br> 8/10 (6 votos)</h2></div></a>
                 </div>
                 <div class="detail-descripcion">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nesciunt nulla dignissimos ipsum incidunt ea, iure eius cupiditate tempora. In consectetur cupiditate dolorum quia, blanditiis excepturi labore animi neque sed.</p>
+                    <p>Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra. </p>
                 </div>
                 <div class="detail-iconos">
                     <a href="#"><i class="fa-solid fa-bookmark" style="color: #e0d3b8"></i></a>
                     <a href="#"><i class="fa-solid fa-heart" style= "color: #fb4848"></i></a>
                     <a href="#"><i class="fa-solid fa-comment" style="color: #65b8a6"></i></a>
-                    <a href="#"><i class="fa-sharp fa-solid fa-check" style="color: #36802d"></i></a>
+                    <a href="#"><i class="fa-sharp fa-solid fa-check" style="color: #a4c972"></i></a>
                     <a href="#"><i class="fa-sharp fa-solid fa-book" style="color:#e8e490"></i></a>
                 </div>   
         </div>
