--- a/pages/detail.html
+++ b/pages/detail.html
@@ -25,12 +25,14 @@
                 <div>
                     <img src="../img/el-viento-conoce-mi-nombre.jpg" class="imagen-principal" alt="img">
                 </div>
-                <div class="detail-atributos">
-                    <div class="atributo1"><h2>Año de publicacion:<a href="#" style="color:#d62e2e"><br> 2022</h2></div></a>
-                    <div class="atributo2"><h2>Temas:<a href="#" style="color:#d62e2e"><br> Narrativa</h2></div></a> 
-                    <div class="atributo3"><h2>Editorial:<a href="#" style="color:#d62e2e"><br> Plaza & Janes</h2></div></a>
-                    <div class="atributo4"><h2>Nota media:<a href="#" style="color:#d62e2e"><br> 8/10 (6 votos)</h2></div></a>
-                </div>
+                <div class="atributo1">
+                    <h2>Año de publicacion:<a href="#" style="color:#d62e2e"><br> 2022</h2></div></a>
+                <div class="atributo2">
+                    <h2>Temas:<a href="#" style="color:#d62e2e"><br> Narrativa</h2></div></a>
+                <div class="atributo3">
+                    <h2>Editorial:<a href="#" style="color:#d62e2e"><br> Plaza & Janes</h2></div></a>
+                <div class="atributo4">
+                    <h2>Nota media:<a href="#" style="color:#d62e2e"><br> 8/10 (6 votos)</h2></div></a>
                 <div class="detail-descripcion">
                     <p>Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra. </p>
                 </div>
@@ -40,126 +42,125 @@
                     <a href="#"><i class="fa-solid fa-comment" style="color: #65b8a6"></i></a>
                     <a href="#"><i class="fa-sharp fa-solid fa-check" style="color: #a4c972"></i></a>
                     <a href="#"><i class="fa-sharp fa-solid fa-book" style="color:#e8e490"></i></a>
-                </div>   
+                </div>
         </div>
-        <aside class="detail-lateral">
-            <h2 class="detail-titulo-lateral">Otros libros del autor</h2>
+    </main>
+    <section class="detail-otros">
+        <h2>Otros libros del autor</h2><br>
             <div class="detail-otros-libros-autor">
                 <a href="#">
                     <figure>
-                        <img src="../img/el-juego-de-ripper.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <img src="../img/el-juego-de-ripper.jpg" class="imagen2" alt="Imagen2"><br>
                         <button class="button1">Conoce mas</button>
                     </figure>
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="../img/evaluna.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <img src="../img/evaluna.jpg" class="imagen2" alt="Imagen2"><br>
                         <button class="button1">Conoce mas</button>
                     </figure>
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="../img/violeta.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <img src="../img/violeta.jpg" class="imagen2" alt="Imagen2"><br>
                         <button class="button1">Conoce mas</button>
                     </figure>
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="../img/la suma.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <img src="../img/la suma.jpg" class="imagen2" alt="Imagen2"><br>
                         <button class="button1">Conoce mas</button>
                     </figure>
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="../img/invierno.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <img src="../img/invierno.jpg" class="imagen2" alt="Imagen2"><br>
                         <button class="button1">Conoce mas</button>
                     </figure>
                 </a>
                 <a href="#">
                     <figure>
-                        <img src="../img/lacasadelosespiritus.jpg" class="imagen2" alt="Imagen 2"><br>
+                        <img src="../img/lacasadelosespiritus.jpg" class="imagen2" alt="Imagen2"><br>
                         <button class="button1">Conoce mas</button>
                     </figure>
                 </a>
             </div>
-        </aside>
-    </main>
+    </section>
     <section class="detail-contenedor-comentarios">
         <div class="detail-opiniones">
-            <h2>Comentarios de "El viento conoce mi nombre"</h2><br>
+            <h2>Comentarios y sinopsis de "El viento conoce mi nombre"</h2><br>
             <article class="detail-comentarios">
-                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Maria</h3> 
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Maria</h3>
                 <h5>24 de abril 2022</h5>
                 <p>La autora presenta varias historias en principio inconexas pero que confluyen en un final emotivo. El pasado siempre vuelve y es difícil ver que no se avanza y no aprendemos de nuestros errores como sociedad. Vidas destruidas en busca de un futuro mejor.</p><br>
             </article>
-                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Juan</h3> 
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Juan</h3>
                 <h5>12 de mayo 2022</h5>
                 <p>La lectura cautiva porque como en tantas otras lecturas de esta autora la vida cotidiana de los personajes discurre en un contexto real y muy bien descrito. Una historia preciosa, muy recomendable.</p><br>
             </article>
             <article class="detail-comentarios">
-                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Pedro</h3> 
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> Pedro</h3>
                 <h5>17 de junio 2022</h5>
                 <p>Excelente novela. La recomiendo. Es muy triste y cruda, pero a la vez muy tierna por la relación de los protagonistas: Samuel, Anita, Leticia, Selena y Frank.</p><br>
             </article>
             <article class="-detail-comentarios">
-                <h3 i class="fa-solid fa-user" style="color:#5f0609"> laura</h3> 
+                <h3 i class="fa-solid fa-user" style="color:#5f0609"> laura</h3>
                 <h5>14 de marzo 2023</h5>
                 <p>Este último libro me ha sorprendido. Tiene una primera parte (la persecución de los judíos en Alemania por los nazis) que no es un tema habitual en sus libros. Luego empiezan a aparecer personajes, muchos escenarios y saltos en el tiempo, que dificultan un poco la lectura.</p>
             </article>
         </div>
     </section>
-    
+
     <div class="detail-contenedor-libros">
-        <div class="detail-titulo3">
-            <h2><span>Otras lecturas recomendadas</span></h2></div>
-            <section class="detail-libros">
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../img/lagrietadelsilencio.jpg" class="imagen3" alt="Imagen 1">
-                        </figure>
-                    </a>
-                        <button class="button2">+ Info</button>
+        <h2>Otras lecturas recomendadas</h2>
+        <section class="detail-libros">
+            <article class="detail-libro">
+                <a href="#">
+                    <figure>
+                        <img src="../img/lagrietadelsilencio.jpg" class="imagen3" alt="Imagen 1">
+                    </figure>
+                </a>
+                <button class="button2">+ Info</button>
+            </article>
+            <article class="detail-libro">
+                <a href="#">
+                    <figure>
+                        <img src="../img/sorprendetumente.jpg" class="imagen3" alt="Imagen 2">
+                    </figure>
+                </a>
+                <button class="button2">+ Info</button>
+            </article>
+            <article class="detail-libro">
+                <a href="#">
+                    <figure>
+                        <img src="../img/latemeraria.jpg" class="imagen3" alt="Imagen 3">
+                    </figure>
+                </a>
+                <button class="button2">+ Info</button>
+            </article>
+            <article class="detail-libro">
+                <a href="#">
+                    <figure>
+                        <img src="../img/hijoolvidado.jpg" class="imagen3" alt="Imagen 4">
+                    </figure>
+                </a>
+                <button class="button2">+ Info</button>
                 </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../img/sorprendetumente.jpg" class="imagen3" alt="Imagen 2">
-                        </figure>
-                    </a>
-                        <button class="button2">+ Info</button>
-                </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../img/latemeraria.jpg" class="imagen3" alt="Imagen 3">
-                        </figure>
-                    </a>
-                        <button class="button2">+ Info</button>
-                </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../img/hijoolvidado.jpg" class="imagen3" alt="Imagen 4">
-                        </figure>
-                    </a>
-                        <button class="button2">+ Info</button>
-                </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../img/sociedaddelanieve.jpg" class="imagen3" alt="Imagen 4">
-                        </figure>
-                    </a>
-                        <button class="button2">+ Info</button>
-                </article>
-                <article class="detail-libro">
-                    <a href="#">
-                        <figure>
-                            <img src="../img/blackwater2.jpg" class="imagen3" alt="Imagen 4">
-                        </figure>
-                    </a>
-                        <button class="button2">+ Info</button>
+            <article class="detail-libro">
+                <a href="#">
+                    <figure>
+                        <img src="../img/sociedaddelanieve.jpg" class="imagen3" alt="Imagen 4">
+                    </figure>
+                </a>
+                <button class="button2">+ Info</button>
+            </article>
+            <article class="detail-libro">
+                <a href="#">
+                    <figure>
+                        <img src="../img/blackwater2.jpg" class="imagen3" alt="Imagen 4">
+                    </figure>
+                </a>
+                <button class="button2">+ Info</button>
                 </article>
                 <article class="detail-libro">
                     <a href="#">
@@ -175,12 +176,12 @@
                             <img src="../img/ramongener.jpg" class="imagen3" alt="Imagen 4">
                         </figure>
                     </a>
-                        <button class="button2">+ Info</button>
+                    <button class="button2">+ Info</button>
                 </article>
             </section>
     </div>
  <footer>
-    <footer>    
+    <footer>
         Footer
     </footer>
     <nav class="navbar">
