avanzo en media querys

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -20,70 +20,70 @@
         </div>
     </header>
     <main class="detail-contenedor-comienzo">
-        <div class="detail-img-atribu-descripcion">
-            <h1 id="detail-titulo1">El viento Conoce mi nombre</h1>
-                <div>
-                    <img src="../img/el-viento-conoce-mi-nombre.jpg" class="imagen-principal" alt="img">
-                </div>
-                <div class="atributo1">
-                    <h2>Año de publicacion:<a href="#" style="color:#d62e2e"><br> 2022</h2></div></a>
-                <div class="atributo2">
-                    <h2>Temas:<a href="#" style="color:#d62e2e"><br> Narrativa</h2></div></a>
-                <div class="atributo3">
-                    <h2>Editorial:<a href="#" style="color:#d62e2e"><br> Plaza & Janes</h2></div></a>
-                <div class="atributo4">
-                    <h2>Nota media:<a href="#" style="color:#d62e2e"><br> 8/10 (6 votos)</h2></div></a>
-                <div class="detail-descripcion">
-                    <p>Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra. </p>
-                </div>
-                <div class="detail-iconos">
-                    <a href="#"><i class="fa-solid fa-bookmark" style="color: #e0d3b8"></i></a>
-                    <a href="#"><i class="fa-solid fa-heart" style= "color: #fb4848"></i></a>
-                    <a href="#"><i class="fa-solid fa-comment" style="color: #65b8a6"></i></a>
-                    <a href="#"><i class="fa-sharp fa-solid fa-check" style="color: #a4c972"></i></a>
-                    <a href="#"><i class="fa-sharp fa-solid fa-book" style="color:#e8e490"></i></a>
-                </div>
+        <h1 id="detail-titulo1">El viento Conoce mi nombre</h1>
+        <div>
+            <img src="../img/el-viento-conoce-mi-nombre.jpg" class="imagen-principal" alt="img">
+        </div>
+        <div class="atributos">
+            <div class="atributo1">
+                <h2>Año de publicacion:<a href="#" style="color:#d62e2e"><br> 2022</h2></div></a>
+            <div class="atributo1">
+                <h2>Temas:<a href="#" style="color:#d62e2e"><br> Narrativa</h2></div></a>
+            <div class="atributo1">
+                <h2>Editorial:<a href="#" style="color:#d62e2e"><br> Plaza & Janes</h2></div></a>
+            <div class="atributo1">
+                <h2>Nota media:<a href="#" style="color:#d62e2e"><br> 8/10 (6 votos)</h2></div></a>
+        </div>
+        <div class="detail-descripcion">
+            <p>Viena, 1938. Samuel Adler es un niño judío de seis años cuyo padre desaparece durante la Noche de los Cristales Rotos, en la que su familia lo pierde todo. Su madre, desesperada, le consigue una plaza en un tren que le llevará desde la Austria nazi hasta Inglaterra. </p>
+        </div>
+        <div class="detail-iconos">
+            <a href="#"><i class="fa-solid fa-bookmark" style="color: #e0d3b8"></i></a>
+            <a href="#"><i class="fa-solid fa-heart" style= "color: #fb4848"></i></a>
+            <a href="#"><i class="fa-solid fa-comment" style="color: #65b8a6"></i></a>
+            <a href="#"><i class="fa-sharp fa-solid fa-check" style="color: #a4c972"></i></a>
+            <a href="#"><i class="fa-sharp fa-solid fa-book" style="color:#e8e490"></i></a>
         </div>
     </main>
     <section class="detail-otros">
         <h2>Otros libros del autor</h2><br>
-            <div class="detail-otros-libros-autor">
+        <div class="detail-otros-libros-autor">
+            <a href="#">
+                <figure>
+                    <img src="../img/el-juego-de-ripper.jpg" class="imagen2" alt="Imagen2"><br>
+                    <button class="button1">Conoce mas</button>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <img src="../img/evaluna.jpg" class="imagen2" alt="Imagen2"><br>
+                    <button class="button1">Conoce mas</button>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <img src="../img/violeta.jpg" class="imagen2" alt="Imagen2"><br>
+                    <button class="button1">Conoce mas</button>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <img src="../img/la suma.jpg" class="imagen2" alt="Imagen2"><br>
+                    <button class="button1">Conoce mas</button>
+                </figure>
+            </a>
                 <a href="#">
-                    <figure>
-                        <img src="../img/el-juego-de-ripper.jpg" class="imagen2" alt="Imagen2"><br>
-                        <button class="button1">Conoce mas</button>
-                    </figure>
-                </a>
-                <a href="#">
-                    <figure>
-                        <img src="../img/evaluna.jpg" class="imagen2" alt="Imagen2"><br>
-                        <button class="button1">Conoce mas</button>
-                    </figure>
-                </a>
-                <a href="#">
-                    <figure>
-                        <img src="../img/violeta.jpg" class="imagen2" alt="Imagen2"><br>
-                        <button class="button1">Conoce mas</button>
-                    </figure>
-                </a>
-                <a href="#">
-                    <figure>
-                        <img src="../img/la suma.jpg" class="imagen2" alt="Imagen2"><br>
-                        <button class="button1">Conoce mas</button>
-                    </figure>
-                </a>
-                <a href="#">
-                    <figure>
-                        <img src="../img/invierno.jpg" class="imagen2" alt="Imagen2"><br>
-                        <button class="button1">Conoce mas</button>
-                    </figure>
-                </a>
-                <a href="#">
-                    <figure>
-                        <img src="../img/lacasadelosespiritus.jpg" class="imagen2" alt="Imagen2"><br>
-                        <button class="button1">Conoce mas</button>
-                    </figure>
-                </a>
+                <figure>
+                    <img src="../img/invierno.jpg" class="imagen2" alt="Imagen2"><br>
+                    <button class="button1">Conoce mas</button>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <img src="../img/lacasadelosespiritus.jpg" class="imagen2" alt="Imagen2"><br>
+                    <button class="button1">Conoce mas</button>
+                </figure>
+            </a>
             </div>
     </section>
     <section class="detail-contenedor-comentarios">
@@ -94,6 +94,7 @@
                 <h5>24 de abril 2022</h5>
                 <p>La autora presenta varias historias en principio inconexas pero que confluyen en un final emotivo. El pasado siempre vuelve y es difícil ver que no se avanza y no aprendemos de nuestros errores como sociedad. Vidas destruidas en busca de un futuro mejor.</p><br>
             </article>
+            <article>
                 <h3 i class="fa-solid fa-user" style="color:#5f0609"> Juan</h3>
                 <h5>12 de mayo 2022</h5>
                 <p>La lectura cautiva porque como en tantas otras lecturas de esta autora la vida cotidiana de los personajes discurre en un contexto real y muy bien descrito. Una historia preciosa, muy recomendable.</p><br>
@@ -110,7 +111,6 @@
             </article>
         </div>
     </section>
-
     <div class="detail-contenedor-libros">
         <h2>Otras lecturas recomendadas</h2>
         <section class="detail-libros">
