--- a/pages/detail.html
+++ b/pages/detail.html
@@ -11,9 +11,8 @@
     <title>Details</title>
 </head>
 <body>
-    
     <section id="detail-contenedor-comienzo">
-        <div class="container">
+        <div class="detail-container">
             <h1><span class="Titulo1">El viento conoce mi nombre</span></h1>
             <div class="img-container">
                 <img src="../img/el-viento-conoce-mi-nombre.jpg">
