--- a/pages/busqueda-avanzada.html
+++ b/pages/busqueda-avanzada.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style-form2.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>formulario2 cargar libros</title>
 </head>
 <body>
-    <form>
+    <header>
+        <h1>Búsqueda avanzada</h1>
+        <div class="buscador">
+            <input type="text" placeholder="Buscar">
+            <div class="boton">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>            
+        </div>
+    </header>
+   <main id="busqueda-main">
+    <form class="busqueda-form">
         <h2>Encontra tus libros favoritos</h2><br>
-        <div class="input-group">
+        <div class="busqueda-input-group">
             <label for="name">Nombre del libro:</label>
             <input type="text" name="name" id="name">
             <label for="autor">Nombre del autor:</label>
             <input type="text" name="autor" id="autor">
             <label for="año">Año de publicacion:</label>
-            <input type="number" name="año" id="año" value="1998">
+            <input type="number" name="año" id="año" value="">
             <label for="genero">Genero del libro:</label>
             <select name="genero">
                 <option value="dramatica">Dramatica</option>
@@ -32,4 +42,5 @@
         </div>
     </form>
 </body>
+   </main>
 </html>
