registro / login funcionalidad

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="copyright" content="Bookflix">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
-        <link rel="icon" type="" href="./img/icons8-gafas-30.png">
+        <link rel="icon" type="" href="img/icons8-gafas-30.png">
         <title>BookFlix</title>
     </head>
     <body>
@@ -26,12 +26,12 @@
                     <h1 class="title-home">Tu blog de reseñas literarias</h1>
                     <p class="p-home">¿Quieres ver Bookflix ya?</p>
                     <div class="div-btn-home">
-                        <button class="btn-home">Comenzar</button>
+                        <button class="btn-home"><a href="pages/registro.html">Comenzar</a></button>
                     </div>
             </div>        
             <div class="home-div-seccion">
                 <h2 class="home-title-seccion">Recientes</h2>
-                <a href="">Ver más</a>
+                <a href="pages/recent.html">Ver más</a>
                 <div class="home-cont-libros">
                     <div class="home-cont-libro">
                         <img class="home-libro" src="img/libro1.jpg" alt="">
@@ -86,14 +86,15 @@
         
     <nav class="navbar">
         <ul>
-            <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
             <li><a href="pages/detail.html"><i class="fa-solid fa-star"></i></a></li>
-            <li><a href="pages/profile.html"><i class="fa-solid fa-user"></i></a></li>
             <li><a href="pages/recent.html"><i class="fa-solid fa-list-check"></i></a></li>
             <li><a href="pages/review.html"><i class="fa-solid fa-glasses"></i></a></li>
             <li><a href="pages/about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+            <li><a href="pages/profile.html"><i class="fa-solid fa-user"></i></a></li>
         </ul>
     </nav>
 
-        <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
-    </body>
+    <script src="main/main.js"></script>
+    <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
+</body>
