--- a/pages/busqueda-avanzada.html
+++ b/pages/busqueda-avanzada.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="" href="img/icons8-gafas-30.png">
     <title>formulario2 cargar libros</title>
 </head>
 <body>
@@ -59,13 +60,16 @@
     <nav class="navbar">
         <ul>
             <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
-            <li><a href="pages/detail.html"><i class="fa-solid fa-star"></i></a></li>
-            <li><a href="pages/profile.html"><i class="fa-solid fa-user"></i></a></li>
-            <li><a href="pages/recent.html"><i class="fa-solid fa-list-check"></i></a></li>
-            <li><a href="pages/review.html"><i class="fa-solid fa-glasses"></i></a></li>
-            <li><a href="pages/about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+            <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
+            <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+            <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
+            <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+            <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
         </ul>
     </nav>
+
+    <script src="../main/main.js"></script>
+    <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
 
    </body>
 </html>
