--- a/pages/recent.html
+++ b/pages/recent.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="" href="img/icons8-gafas-30.png">
+
     <title>Mi perfil</title>
 </head>
 <body>
@@ -62,14 +64,14 @@
             <ul>
                 <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
-                <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>                
                 <li><a href="#"><i class="fa-solid fa-list-check"></i></a></li>
                 <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
                 <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+                <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
             </ul>
         </nav>
-
        
-    <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
+        <script src="../main/main.js"></script>
+        <script src="https://kit.fontawesome.com/63ed2924ae.js" crossorigin="anonymous"></script>
     </body>
 </html>
