--- a/pages/registro.html
+++ b/pages/registro.html
@@ -8,6 +8,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="" href="img/icons8-gafas-30.png">
+
     <title>Registro</title>
   </head>
   <body>
@@ -87,10 +89,10 @@
 
          <div class="terminos-envio">
             <div class="condiciones-container">
-              <input type="checkbox" id="condiciones" value="1" />
-              <label for="condiciones"><a href="#">Acepto términos y condiciones</a></label>
+              <input type="checkbox" id="condiciones" value="1" required/>
+              <label for="condiciones"><a href="#" >Acepto términos y condiciones</a></label>
             </div>     
-          <button class="controles" id="btn-registro" value="Registrarse">Registrarse</button>
+          <button class="controles" id="btn-registro">Registrarse</button>
           <a href="#">¿Aún no tienes cuenta?</a>
          </div>
         </section>
@@ -112,16 +114,15 @@
 
 
   <nav class="navbar">
-      <ul>
-          <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
-          <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
-          <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
-          <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
-          <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
-          <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
-      </ul>
-  </nav>
-
+    <ul>
+        <li><a href="../index.html"><i class="fa-solid fa-house"></i></a></li>
+        <li><a href="detail.html"><i class="fa-solid fa-star"></i></a></li>
+        <li><a href="recent.html"><i class="fa-solid fa-list-check"></i></a></li>
+        <li><a href="review.html"><i class="fa-solid fa-glasses"></i></a></li>
+        <li><a href="about.html"><i class="fa-solid fa-circle-info"></i></a></li>
+        <li><a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
+    </ul>
+</nav>
   <script src="../main/main.js"></script>
   <script
   src="https://kit.fontawesome.com/63ed2924ae.js"
