funcionalidad de la api

--- a/index.html
+++ b/index.html
@@ -32,43 +32,12 @@
             <div class="home-div-seccion">
                 <h2 class="home-title-seccion">Recientes</h2>
                 <a href="pages/recent.html">Ver más</a>
-                <div class="home-cont-libros">
-                    <div class="home-cont-libro">
-                        <img class="home-libro" src="img/libro1.jpg" alt="">
-                        <h3 class="home-title-libro">Título</h3>
-                        <p class="home-puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="home-cont-libro">
-                        <img class="home-libro" src="img/libro2.jpg" alt="">
-                        <h3 class="home-title-libro">Título</h3>
-                        <p class="home-puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="home-cont-libro">
-                        <img class="home-libro" src="img/libro3.jpg" alt="">
-                        <h3 class="home-title-libro">Título</h3>
-                        <p class="home-puntuacion">Puntuacion</p>
-                    </div>
+                <div id="home-cont-libros-recientes" class="home-cont-libros">
                 </div>
             </div>
             <div class="home-div-seccion">
                 <h2 class="home-title-seccion">Recomendados</h2>
-                <a href="">Ver más</a>
-                <div class="home-cont-libros">
-                    <div class="home-cont-libro">
-                        <img class="home-libro" src="img/libro1.jpg" alt="">
-                        <h3 class="home-title-libro">Título</h3>
-                        <p class="home-puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="home-cont-libro">
-                        <img class="home-libro" src="img/libro2.jpg" alt="">
-                        <h3 class="home-title-libro">Título</h3>
-                        <p class="home-puntuacion">Puntuacion</p>
-                    </div>
-                    <div class="home-cont-libro">
-                        <img class="home-libro" src="img/libro3.jpg" alt="">
-                        <h3 class="home-title-libro">Título</h3>
-                        <p class="home-puntuacion">Puntuacion</p>
-                    </div>
+                <div id="home-cont-libros-recomendados" class="home-cont-libros">
             </div>
         </main>
         <footer>
@@ -81,7 +50,6 @@
                     <i class="fa-brands fa-square-x-twitter footer-icon"></i>
                 </div>
             </div>
-
         </footer>
         
     <nav class="navbar">
