--- a/pages/recent.html
+++ b/pages/recent.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="" href="img/icons8-gafas-30.png">
 
-    <title>Mi perfil</title>
+    <title>Recientes</title>
 </head>
 <body>
     <header>
@@ -22,27 +22,7 @@
             </div>
     </header>
         <main>
-            <div class="recientes-contenedor">
-                <div class="reciente-libro">
-                    <img src="../img/el-dia-de-los-trifidos.jpg" alt="">
-                    <h3>Titulo</h3>
-                    <span>Puntuacion</span>
-                    <p>resumen</p>
-                </div>
-
-                <div class="reciente-libro">
-                    <img src="../img/el-dia-de-los-trifidos.jpg" alt="">
-                    <h3>Titulo</h3>
-                    <span>Puntuacion</span>
-                    <p>resumen</p>
-                </div>
-
-                <div class="reciente-libro">
-                    <img src="../img/el-dia-de-los-trifidos.jpg" alt="">
-                    <h3>Titulo</h3>
-                    <span>Puntuacion</span>
-                    <p>resumen</p>
-                </div>
+            <div id= "recientes-contenedor" class="recientes-contenedor">
             </div>
         </main>
 
