Actualizacion "About Us"

--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,8 @@
                </div>
     
                <div class="about-text">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel repellat, quidem quasi consectetur fugit nobis! Voluptatibus consectetur quos, ab dolorem ipsam nemo aut nihil, ducimus optio earum hic quisquam quas.</p>
+                    <p>BOOKFLIX nace con la idea de ser un referente en el mundo de los libros. Nuestro objetivo es crear una comunidad web completa y atractiva. Para eso necesitamos su colaboración, son ustedes, los lectores, los que crean y aportan contenido a nuestra web. Su puntuación y crítica sobre cada libro resultan imprescindibles, ayudan al resto de lectores a encontrar aquél libro que desconocían y les apasionará.
+                        No tenemos intereses comerciales ni dependemos de ningún grupo editorial o librería.</p>
     
                </div>
           </div>
